do week1's work

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,6 +1,6 @@
-name: Your Name
-studentNumber: z1234567
-officialEmail: noIdea@unsw.edu.au
+name: Xinyi Chen
+studentNumber: z5284428
+officialEmail: z5284428@unsw.edu.au
 contactEmail:
-  firstBit: firstName.Lastname  # this avoids spam, the @ is implied
+  firstBit: Xinyi.Chen
   otherBit: whereIwork.com
